@@ -44,13 +44,13 @@ struct _GimpTextLayoutClass
 };
 
 
-typedef  void (* GimpTextRenderFunc) (PangoFont  *font,
-                                      PangoGlyph  glyph,
+typedef  void (* GimpTextRenderFunc) (PangoFont            *font,
+                                      PangoGlyph            glyph,
                                       cairo_font_options_t *options,
-                                      cairo_matrix_t  *tranform,
-                                      gint        x,
-                                      gint        y,
-                                      gpointer    render_data);
+                                      cairo_matrix_t       *tranform,
+                                      gint                  x,
+                                      gint                  y,
+                                      gpointer              render_data);
 
 
 #endif /* __GIMP_TEXT_LAYOUT_PRIVATE_H__ */
