@@ -62,9 +62,9 @@ static void  gimp_text_layout_render_glyphs  (GimpTextLayout     *layout,
                                               gint                x,
                                               gint                y,
                                               gpointer            render_data);
-static cairo_font_options_t   *gimp_text_layout_render_flags (GimpTextLayout  *layout);
-static void       gimp_text_layout_render_trafo (GimpTextLayout  *layout,
-                                                 cairo_matrix_t       *trafo);
+static cairo_font_options_t *gimp_text_layout_render_flags (GimpTextLayout  *layout);
+static void                  gimp_text_layout_render_trafo (GimpTextLayout  *layout,
+                                                            cairo_matrix_t  *trafo);
 
 
 
@@ -145,13 +145,13 @@ gimp_text_layout_render_glyphs (GimpTextLayout     *layout,
                                 gint                y,
                                 gpointer            render_data)
 {
-  PangoGlyphInfo *gi;
+  PangoGlyphInfo       *gi;
   cairo_font_options_t *flags;
-  cairo_matrix_t trafo;
-  double pos_x;
-  double pos_y;
-  gint            i;
-  gint            x_position = 0;
+  cairo_matrix_t        trafo;
+  double                pos_x;
+  double                pos_y;
+  gint                  i;
+  gint                  x_position = 0;
 
   flags = gimp_text_layout_render_flags (layout);
   gimp_text_layout_render_trafo (layout, &trafo);
@@ -178,7 +178,7 @@ gimp_text_layout_render_glyphs (GimpTextLayout     *layout,
 static cairo_font_options_t *
 gimp_text_layout_render_flags (GimpTextLayout *layout)
 {
-  GimpText *text  = layout->text;
+  GimpText             *text  = layout->text;
   cairo_font_options_t *flags;
 
   flags = cairo_font_options_create ();
@@ -188,7 +188,7 @@ gimp_text_layout_render_flags (GimpTextLayout *layout)
   else
     cairo_font_options_set_antialias (flags, CAIRO_ANTIALIAS_NONE);
 /*
- * commented because there's no real autohint support in cairo as in ft2
+ * commented because there's no real autohint support in cairo like there is in ft2
   if (text->autohint)
     cairo_font_options_set_hint_style (flags, CAIRO_HINT_STYLE_DEFAULT);
 */
